# ChangeLog for sys-libs/com_err
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.66 2008/05/01 14:45:48 maekke Exp $

  01 May 2008; Markus Meier <maekke@gentoo.org> com_err-1.40.8.ebuild:
  amd64/x86 stable, bug #213588

  30 Apr 2008; Tobias Klausmann <klausman@gentoo.org> com_err-1.40.8.ebuild:
  Stable on alpha, bug #213588

  27 Apr 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.8.ebuild:
  Stable for HPPA (bug #213588).

*com_err-1.40.9 (27 Apr 2008)

  27 Apr 2008; Mike Frysinger <vapier@gentoo.org> +com_err-1.40.9.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.6.ebuild:
  Stable for HPPA too.

  17 Mar 2008; Christian Heim <phreak@gentoo.org> com_err-1.40.4.ebuild:
  com_err-1.40.4 also needs tls disabled on uClibc.

  17 Mar 2008; Christian Heim <phreak@gentoo.org> com_err-1.40.6.ebuild,
  com_err-1.40.8.ebuild:
  Disable tls support if we're using uClibc (#213223 by Sergey Dryabzhinsky).

  16 Mar 2008; Samuli Suominen <drac@gentoo.org> com_err-1.40.6.ebuild:
  amd64 stable

  16 Mar 2008; Raúl Porcel <armin76@gentoo.org> com_err-1.40.6.ebuild:
  alpha/ia64/sparc/x86 stable

  16 Mar 2008; Mike Frysinger <vapier@gentoo.org> com_err-1.40.8.ebuild:
  Use emake in src_install.

*com_err-1.40.8 (14 Mar 2008)

  14 Mar 2008; Mike Frysinger <vapier@gentoo.org> +com_err-1.40.8.ebuild:
  Version bump.

*com_err-1.40.6 (10 Feb 2008)

  10 Feb 2008; Mike Frysinger <vapier@gentoo.org> +com_err-1.40.6.ebuild:
  Version bump.

  03 Feb 2008; Christoph Mende <angelos@gentoo.org> com_err-1.40.4.ebuild:
  Stable on amd64, bug #207841

  31 Jan 2008; nixnut <nixnut@gentoo.org> com_err-1.40.4.ebuild:
  Stable on ppc wrt bug 207841

  29 Jan 2008; Brent Baude <ranger@gentoo.org> com_err-1.40.4.ebuild:
  Marking com_err-1.40.4 ppc64 for bug 207841

  28 Jan 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.4.ebuild: